--- a/Banking.CurrentAccount.UI/Pages/Index.razor
+++ b/Banking.CurrentAccount.UI/Pages/Index.razor
@@ -2,6 +2,6 @@
 
 <h1>Hello, world!</h1>
 
-Welcome to your new app.
+Digital Banking Application.
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+Please click the Transaction History on the left
